# Climate-Risk-Analysis

./: .breakpoints  bulkreading.py  climate-normals.csv  coastlines.py  config.toml  dailies.py  daily_report.py  diurnaltempvariation.py  errorreport.txt  example2.csv  example5.csv  fetchdailies.py  fetchdata.py  freezingprecip.ipynb  from_dailies.py  graphdaily.py  hours.txt  idf.ipynb  lenny.py  listoutmetadata.py  main.py  meghan.py  nfp_transmissioninfo.ipynb  observations.ipynb  openconfig.py  pyproject.toml  rainonsnow.ipynb  readfull.ipynb  readnormals.ipynb  reportprintoutvalues.py  reports.py  scores-wind.ipynb  siteIDdb.py  temporarydailydata.csv  writtenreportoutput.csv
2022/: .breakpoints  .replit  example4.csv  fetchdailies.py  fetchdata.py  siteIDdb.py  siteIDlist.csv  temporarydailydata.csv  writtenreportoutput.csv
2022/junk/: example.csv  example3.csv
coastline distance attempts/: coast-tree.ipynb  coastlines.py  dist2coast.py  iterative.ipynb
derived datasets/: drydays.py  extremesnow.py  humidex.py  humidex5y.ipynb
inherited/: Ouranos_prfr_tot.py
