[tool.poetry]
name = "repl_python3_mainpy"
version = "0.1.0"
description = ""
authors = ["meggerrsss <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
prettyprint = "^0.1.5"
bs4 = "^0.0.1"
toml = "^0.10.2"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
